# FastAPI_Strawberry_strawberry-sqlalchemy_DemoApp

./: .gitignore  Dockerfile  README.md  compose.yml  docker-entrypoint.sh  pyproject.toml  render-start-cmd.sh
.devcontainer/: devcontainer.json  docker-compose.yml
docs/supabase/: ddl.sql  shcema.sql
migrations/: env.py
migrations/versions/: 17d6d949de06_.py  5082e2532683_.py  50c9baff9861_create_table_auth_users.py
src/api/: app.py  main.py  mutation.py  query.py  resolvers.py  schema.py  settings.py  types.py
src/api/auth/: password.py  token.py  user_authenticator.py
src/api/resolvers/: context.py  mutations.py  queries.py  stmts.py
src/api/resolvers/mutations/: country_resolver.py  user_resolver.py
src/api/resolvers/queries/: city_resolver.py  country_resolver.py
src/api/resolvers/stmts/: city_stmt.py  country_stmt.py  user_stmt.py
src/api/schema/: mutation.py  query.py  schema.py  types.py
src/api/schema/mutations/: country_mutation.py  user_mutation.py
src/api/schema/queries/: city_query.py  country_query.py
src/database/: config.py  db.py  models.py  session_manager.py
src/libs/supabase/: client.py
tests/: conftest.py  seed.py
tests/api/: test_main.py
tests/api/resolvers/: test_stmts.py
tests/api/resolvers/stmts/: test_city_stmt.py  test_country_stmt.py  test_user_stmt.py
tests/api/schema/: mutation.py  query.py  test_mutation.py  test_query.py
tests/api/schema/mutations/: coutry_mutation.py  test_country_mutation.py  test_user_mutation.py  user_mutation.py
tests/api/schema/queries/: city_query.py  country_query.py  test_city_query.py  test_coutry_query.py
